# recruit-analysis

./: .env.example  .gitignore  .pylintrc  Dockerfile  Dockerfile.superset  Makefile  README.md  airflow-compose.yml  delete_project.sh  init-letsencrypt.sh  keycloak-compose.yml  main.py  nginx-compose.yml  postgres-compose.yml  pyproject.toml  requirements.txt  start_project.sh  stop_project.sh  superset-compose-dev.yml  superset-compose.yml
airflow/dags/: add_all_vacancies.py  statistic_applicant.py  update_vacancies.py
config/: airflow_variables.json  applicant_statuses.json  vacancy_statuses.json
data/: myconf.conf  nginx.conf
docker/: .env-non-dev
docker/docker-entrypoint-initdb.d/: examples-init.sh
docker/pythonpath_dev/: superset_config.py
docs/: вопросы.md
keycloak/: alkurlevsky.json  nxt.json
postgres/docker-entrypoint-initdb.d/: examples-init.sh
src/: config.py  func.py  handler.py  task.py
src/applicants/: applicants_tasks.py  db_query.py  func.py  utils.py
src/db/: queries.py  tables.py  test_tables.py
src/handler/: func.py  handler.py  hunt_handler.py  hunt_token_proxy.py
src/parser/: data_serialiaze.py  func.py  hunt_parser.py
src/vacancies/: func.py  vacancy_tasks.py
superset/: auth_requirements.txt  docker-init.sh
superset/pythonpath_dev/: .gitignore  keycloak_security_manager.py  superset_config.py
tests/: test_parser.py
